[project]
name = "fitness-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cvzone>=1.6.1",
    "mediapipe>=0.10.21",
    "numpy>=1.26.4",
    "openai>=1.109.1",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "playsound==1.2.2",
    "plotly>=6.3.0",
    "requests>=2.32.5",
    "streamlit>=1.50.0",
    "streamlit-extras>=0.6.0",
    "streamlit-lottie>=0.0.5",
    "streamlit-webrtc>=0.63.4",
    "toml>=0.10.2",
]
